--- a/pinapl-bot/package.json
+++ b/pinapl-bot/package.json
@@ -15,7 +15,7 @@
     "chance": "^1.1.7",
     "config.json": "0.0.4",
     "cron": "^1.8.2",
-    "discord.js": "^12.5.1",
+    "discord.js": "github:discordjs/discord.js",
     "enmap": "^5.8.4",
     "eslint": "^7.15.0",
     "node-cron": "^2.0.3",
