--- a/pinapl-bot/package.json
+++ b/pinapl-bot/package.json
@@ -9,17 +9,19 @@
   "author": "Jeff Turpin",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite-pool": "^0.3.0",
-    "better-sqlite3": "^7.1.1",
+    "better-sqlite-pool": "^0.3.1",
+    "better-sqlite3": "^7.4.3",
     "bindings": "^1.5.0",
     "chance": "^1.1.7",
     "config.json": "0.0.4",
     "cron": "^1.8.2",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "^13.0.1",
     "enmap": "^5.8.4",
     "eslint": "^7.15.0",
     "node-cron": "^2.0.3",
     "node-gyp": "^7.1.2",
+    "node.js": "0.0.1-security",
+    "nvm": "0.0.4",
     "opencollective-postinstall": "^2.0.3",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
